[package]
name = "hls-transmux"
version = "0.2.0"
edition = "2024"
description = "A small, dependency-light HLS → MP4 transmuxer for Rust (TS/fMP4 in, MP4/CMAF out)."
license = "MIT"
repository = "https://github.com/Logosww/hls-transmux"
homepage = "https://github.com/Logosww/hls-transmux"
readme = "README.md"
keywords = ["hls", "mp4", "transmux", "cmaf", "isobmff"]
categories = ["multimedia::video", "multimedia"]
exclude = ["/docs", "/target"]

[features]
default = ["default-source"]
# Built-in reqwest-backed `Source` implementation. Enabled by default. Disable
# with `default-features = false` to drop the reqwest dependency entirely and
# plug in your own `Source` implementation via `HlsInput::custom`.
default-source = ["dep:reqwest"]
# Use ffmpeg (via ffmpeg-next) for `StreamingMp4` finalization instead of the
# crate's self-contained ISOBMFF demux + MP4 mux defrag path. Off by default.
# Requires the FFmpeg 8 shared libraries (libavformat/libavcodec/libavutil) and
# pkg-config at build time. Selected at runtime via
# `TransmuxOptions::finalize_backend = FinalizeBackend::Ffmpeg`.
ffmpeg-finalize = ["dep:ffmpeg-next"]
# Derive `Serialize`/`Deserialize` for `TransmuxResumeState` so callers can
# persist the resume checkpoint directly via e.g. `serde_json`. Off by default;
# callers may also serialize the 4 plain fields themselves without this feature.
serde = ["dep:serde"]

[dependencies]
ffmpeg-next = { version = "8.1", optional = true }
reqwest = { version = "0.13", default-features = false, features = ["rustls"], optional = true }
serde = { version = "1", features = ["derive"], optional = true }
# Base tokio for all targets: only features that work on wasm32.
# Native-only features (fs, net, rt-multi-thread) are added via
# target-specific dependencies below.
tokio = { version = "1", default-features = false, features = ["io-util", "macros", "sync", "rt"] }
url = "2"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1", default-features = false, features = ["fs", "io-util", "macros", "net", "rt-multi-thread", "sync"] }
